--- a/style.css
+++ b/style.css
@@ -9,19 +9,28 @@ body{
 
 .container{
     position: relative;
-    top: 200px;
-    left: 200px;
-    width: 400px;
+   
+    width: 100%;
     height: 400px;
     background: rgb(128, 255, 0);
 }
 
 .box{
-    position: relative;
-    top: 75px;
-    left: 75px;
+    position: absolute;
+    bottom: -70px;
+    left: 250px;
     width: 150px;
     height: 150px;
     background: cyan;
 
+}
+
+.ajuda{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: yellow;
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
 }
