--- a/style.css
+++ b/style.css
@@ -17,11 +17,12 @@ body{
 
 .box{
     position: absolute;
-    bottom: -70px;
-    left: 250px;
-    width: 150px;
-    height: 150px;
+    bottom: -30px;
+    left: 350px;
+    width: 350px;
+    height: 50px;
     background: cyan;
+    z-index: 9999;
 
 }
 
@@ -33,4 +34,45 @@ body{
     position: fixed;
     right: 30px;
     bottom: 30px;
+}
+
+.section{
+    width: 100%;
+    height: 600px;
+    background-color: violet;
+    display: flex;
+    position: relative;
+}
+
+.lado1{
+    width: 250px;
+    height: 250px;
+    background-color: turquoise;
+    position: absolute;
+    left: 200px;
+    top: 160px;
+
+}
+
+.lado1 p{
+    position: absolute;
+    left: 35px;
+    top: 10px;
+}
+.foto{
+    width: 150px;
+    height: 150px;
+    background-color: white;
+    position: absolute;
+    top: 40px;
+    left: 50px;
+}
+
+.lado2{
+    width: 250px;
+    height: 250px;
+    background-color: red;
+    position: absolute;
+    left: 600px;
+    top: 160px;
 }
